--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dewy-langchain"
-version = "0.1.0"
+version = "0.2.0"
 description = ""
 authors = ["Ben Chambers <35960+bjchambers@users.noreply.github.com>"]
 readme = "README.md"
@@ -8,6 +8,8 @@ packages = [{include = "dewy_langchain"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+dewy-client = "^0.2.0"
+langchain-core = "^0.1.23"
 
 
 [build-system]
