--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ langchain-core = "^0.1.23"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.2.1"
+pytest = "^8.0.0"
+dewy = "^0.2.0"
 
 [build-system]
 requires = ["poetry-core"]
